--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -131,7 +131,7 @@
       \textbf{Frameworks}{: React, React Native, Express, Fastify, Jest.} \\
       \textbf{Tools}{: Git, CircleCI, GitHub Actions, Jenkins, XCode, Lerna.} \\
       \textbf{Infrastructure}{: AWS, Elastic Beanstalk, RDS, ElastiCache, EC2, Terraform.} \\
-      \textbf{Libraries \& Others}{: Node.js, Typeorm, Ant Design, Tailwind, Redis, Docker.} \\
+      \textbf{Libraries \& Others}{: Node.js, Typeorm, Ant Design, Tailwind, Redis, Docker, HL7.} \\
       }}
   \end{itemize}
 \end{minipage}\hspace{.02\textwidth}%
@@ -220,7 +220,7 @@
       \resumeProjectHeading
           {\textbf{@es-romo/relay} $|$ \emph{Typescript, Fastify, Lerna, Jest, GitHub Actions, Glitch }}{Nov 2023 -- Present}
           \resumeItemListStart
-            \resumeItem{Creator of a WebSocket-based relay server and client for listen server and host architectures, made available as individual npm packages.}
+            \resumeItem{Creator of a WebSocket relay server that bridges the communication between clients in listen server architectures.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
