Grammar, remove C++ (not relevant)

--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -127,7 +127,7 @@
   \section{Skills}
   \begin{itemize}[leftmargin=0.15in, label={}]
       \small{\item{
-      \textbf{Languages}{: Typescript, SQL, Postgres, JavaScript, HTML, CSS, C++.} \\
+      \textbf{Languages}{: Typescript, SQL, Postgres, JavaScript, HTML, CSS.} \\
       \textbf{Frameworks}{: React, React Native, Express, Fastify, Jest.} \\
       \textbf{Tools}{: Git, CircleCI, GitHub Actions, Jenkins, XCode, Lerna.} \\
       \textbf{Infrastructure}{: AWS, Elastic Beanstalk, RDS, ElastiCache, EC2, Terraform.} \\
@@ -153,7 +153,7 @@
       {Full Stack Software Engineer}{Apr 2021 -- Nov 2023}
       {CANImmunize}{Remote}
       \resumeItemListStart
-        \vspace{4pt}\resumeItem{Took on a pivotal role in the developement of multiple healthtech solutions across all stages of development.}
+        \vspace{4pt}\resumeItem{Spearheaded the creation of multiple health-tech solutions across all stages of development.}
         \vspace{-4pt}\resumeItemHeading{VaxRecordNS}{Allows the residents of Nova Scotia to access their vaccination records.}
         \resumeItemListStart
           \resumeItem{Collaborated closely with multiple vendors as part of a wide effort to centralize the province's health data.}
@@ -211,7 +211,7 @@
     %   {Online Certificate}{udemy.com}
     \resumeSubheading
       {Centro de Enseñanza Técnica Industrial}{Aug 2015 -- Jun 2019}
-      {Technologist in Software Developement}{Guadalajara, Mexico}
+      {Technologist in Software Development}{Guadalajara, Mexico}
   \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------
