--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -127,11 +127,13 @@
   \section{Skills}
   \begin{itemize}[leftmargin=0.15in, label={}]
       \small{\item{
-      \textbf{Languages}{: Typescript, SQL, Postgres, JavaScript, HTML, CSS.} \\
+      % \textbf{Languages}{: Typescript, SQL, Postgres, JavaScript, HTML, CSS.} \\
+      \textbf{Languages}{: Typescript, C++, SQL, Postgres, JavaScript, HTML, CSS.} \\
       \textbf{Frameworks}{: React, React Native, Express, Fastify, Jest.} \\
       \textbf{Tools}{: Git, CircleCI, GitHub Actions, Jenkins, XCode, Lerna.} \\
       \textbf{Infrastructure}{: AWS, Elastic Beanstalk, RDS, ElastiCache, EC2, Terraform.} \\
-      \textbf{Libraries \& Others}{: Node.js, Typeorm, Ant Design, Tailwind, Redis, Docker, HL7.} \\
+      % \textbf{Libraries \& Others}{: Node.js, Typeorm, Ant Design, Tailwind, Redis, Docker, HL7.} \\
+      \textbf{Libraries \& Others}{: Node.js, OpenGL, Dear ImGui, Ant Design, Tailwind, Redis, Docker.} \\
       }}
   \end{itemize}
 \end{minipage}\hspace{.02\textwidth}%
@@ -172,16 +174,10 @@
         \resumeItemListEnd
         \resumeItemHeading{ClinicFlow}{End-to-end software solution for institutions to run paperless mass immunization campaigns.}
         \resumeItemListStart
-          \resumeItem{Developed performant web and mobile applications with React, React Native, and PostgreSQL that handle the forecasting, booking, logging, and proof of vaccination of 1M+ Canadians.}
-          \resumeItem{Expanded the vaccination forecasting system to support new COVID-19 guidelines.}
+          \resumeItem{Developed performant web, Android and iOS applications with React, React Native, and PostgreSQL that handle the forecasting, booking, and proof of vaccination of 1M+ Canadians.}
           \resumeItem{Headed deployments that involved major data migrations and infrastructure changes.}
           \resumeItem{Diagnosed, mitigated and solved critical incidents as the on-call engineer.}
         \resumeItemListEnd
-        % \resumeItemHeading{Canadian Vaccine Catalogue (CVC)}{Comprehensive, standards-based, source-of-truth for vaccine terminology and vaccine product information in Canada.}
-        % \resumeItemListStart
-        %   \resumeItem{Solely responsible for maintaining a catalogue with 100K+ records made available as an npm package, web app, and HL7 FHIR API running on AWS EC2.}
-        %   \resumeItem{Released new versions of the CVC with data provided by Health Canada biweekly using Jenkins.}
-        % \resumeItemListEnd
       \resumeItemListEnd
     \resumeSubheading
       {Freelance Lead Developer}{Feb 2020 -- May 2020}
@@ -218,9 +214,14 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
+          {\textbf{@es-romo/coco} $|$ \emph{C++, OpenGL, Dear ImGui, assimp, emscripten }}{Feb 2024 -- Present}
+          \resumeItemListStart
+            \resumeItem{OpenGL 3D graphics engine for gLTF and OBJ files.}
+          \resumeItemListEnd
+      \resumeProjectHeading
           {\textbf{@es-romo/relay} $|$ \emph{Typescript, Fastify, Lerna, Jest, GitHub Actions, Glitch }}{Nov 2023 -- Present}
           \resumeItemListStart
-            \resumeItem{Creator of a WebSocket relay server that bridges the communication between clients in listen server architectures.}
+            \resumeItem{WebSocket relay server that bridges the communication between clients for use in listen server architectures.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
