--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -127,13 +127,13 @@
   \section{Skills}
   \begin{itemize}[leftmargin=0.15in, label={}]
       \small{\item{
-      % \textbf{Languages}{: Typescript, SQL, Postgres, JavaScript, HTML, CSS.} \\
-      \textbf{Languages}{: Typescript, C++, SQL, Postgres, JavaScript, HTML, CSS.} \\
-      \textbf{Frameworks}{: React, React Native, Express, Fastify, Jest.} \\
+      \textbf{Languages}{: Typescript, SQL, Postgres, JavaScript, HTML, CSS.} \\
+      % \textbf{Languages}{: Typescript, C++, SQL, Postgres, JavaScript, HTML, CSS.} \\
+      \textbf{Frameworks}{: React, React Native, ExpressJS, Fastify, Jest.} \\
       \textbf{Tools}{: Git, CircleCI, GitHub Actions, Jenkins, XCode, Lerna.} \\
       \textbf{Infrastructure}{: AWS, Elastic Beanstalk, RDS, ElastiCache, EC2, Terraform.} \\
-      % \textbf{Libraries \& Others}{: Node.js, Typeorm, Ant Design, Tailwind, Redis, Docker, HL7.} \\
-      \textbf{Libraries \& Others}{: Node.js, OpenGL, Dear ImGui, Ant Design, Tailwind, Redis, Docker.} \\
+      \textbf{Libraries \& Others}{: Node.js, Typeorm, Ant Design, Tailwind, Redis, Docker, HL7.} \\
+      % \textbf{Libraries \& Others}{: Node.js, OpenGL, Dear ImGui, Ant Design, Tailwind, Redis, Docker.} \\
       }}
   \end{itemize}
 \end{minipage}\hspace{.02\textwidth}%
@@ -155,35 +155,39 @@
       {Full Stack Software Engineer}{Apr 2021 -- Nov 2023}
       {CANImmunize}{Remote}
       \resumeItemListStart
-        \vspace{4pt}\resumeItem{Spearheaded the creation of multiple health-tech solutions across all stages of development.}
+        \vspace{4pt}\resumeItem{Spearheaded the creation of multiple health-tech products, such as:}
         \vspace{-4pt}\resumeItemHeading{VaxRecordNS}{Allows the residents of Nova Scotia to access their vaccination records.}
         \resumeItemListStart
-          \resumeItem{Collaborated closely with multiple vendors as part of a wide effort to centralize the province's health data.}
-          \resumeItem{Developed web and mobile apps using React, React Native, and Typescript that interface with a governmental OIDC provider and a FHIR data repository that stores the vaccination records of 1M+ patients.}
-          \resumeItem{Designed scalable serverless services that allow users to manage their dependents and generate official their vaccination records using AWS Lambda, Twilio, and Redis.}
+          % \resumeItem{Collaborated closely with multiple vendors as part of a wide effort to centralize the province's health data.}
+          \resumeItem{Developed a web and mobile app using React, React Native, and Typescript that interfaces with various government services to access the vaccination records of 1M+ people.}
+          \resumeItem{Designed scalable serverless services that allow users to manage their dependents and generate official vaccination records using Terraform, AWS, Twilio, and Redis.}
           \resumeItem{Created dashboards and alerts to monitor the health of the service with CloudWatch and Slack integrations.}
-          \resumeItem{Set up CI/CD pipelines to build and deploy the applications with CircleCI.}
-          \resumeItem{Managed the project's infrastructure using Terraform.}
+          \resumeItem{Integrated SAST into the project to become SOC 2 compliant in collaboration with cybersecurity auditors.}
+          \resumeItem{Set up CI/CD pipelines to build, test, and deploy the applications with CircleCI.}
         \resumeItemListEnd
-        \resumeItemHeading{Shield}{Digital tool to help employers collect, manage and verify proof of vaccination of their employees.}
+        \resumeItemHeading{Shield}{Helps employers collect, manage and verify proof of vaccination of their employees.}
         \resumeItemListStart
-          \resumeItem{Developed a SaaS product with Typescript, React, and PostgreSQL that handled PHI of up to 150K+ employees of major governmental and private organizations.}
-          \resumeItem{Conducted interviews, assisted in hiring, and onboarded co-op students.}
-          \resumeItem{Conducted code reviews of peers and mentored junior developers.}
-          \resumeItem{Implemented suggestions from external cybersecurity audits to become SOC 2 compliant.}
+          \resumeItem{Architected a SaaS product with Typescript, React, and PostgreSQL that handled the PHI of 150K+ users.}
+          \resumeItem{Interviewed candidates, assisted in hiring, and onboarded co-op students.}
+          \resumeItem{Reviewed peers' code and mentored junior developers.}
+          \resumeItem{Diagnosed, mitigated and solved critical incidents as the on-call engineer in close coordination with the customer support team.}
         \resumeItemListEnd
-        \resumeItemHeading{ClinicFlow}{End-to-end software solution for institutions to run paperless mass immunization campaigns.}
+        \resumeItemHeading{ClinicFlow}{End-to-end solution that handles the COVID-19 vaccination rollouts in Yukon and Nova Scotia.}
         \resumeItemListStart
           \resumeItem{Developed performant web, Android and iOS applications with React, React Native, and PostgreSQL that handle the forecasting, booking, and proof of vaccination of 1M+ Canadians.}
           \resumeItem{Headed deployments that involved major data migrations and infrastructure changes.}
-          \resumeItem{Diagnosed, mitigated and solved critical incidents as the on-call engineer.}
         \resumeItemListEnd
+        \resumeItemHeading{Canadian Vaccine Catalogue}{Comprehensive repository of vaccine products and terminology in Canada.} 
+        \resumeItemListStart 
+          \resumeItem{Solely responsible for maintaining a catalogue with 100K+ records made publicly available as an npm package, web app, and FHIR API running on AWS EC2.}
+          % \resumeItem{Released new versions of the CVC with data provided by Health Canada biweekly using Jenkins.} 
+        \resumeItemListEnd 
       \resumeItemListEnd
     \resumeSubheading
       {Freelance Lead Developer}{Feb 2020 -- May 2020}
       {ppeburnrate.com}{Oakville, Ontario}
       \resumeItemListStart
-        \resumeItem{Recruited and led a team of 5 developers in building a responsive web app that helps organizations manage their PPE consumption using React, Express, DigitalOcean and Microsoft SQL Server.}
+        \resumeItem{Recruited and led a team of 5 developers in building a responsive web app that helps organizations manage their PPE consumption using React, ExpressJS, DigitalOcean and Microsoft SQL Server.}
       \resumeItemListEnd
     % \resumeSubheading
     %   {Shipping \& Receiving Associate}{Apr 2019 -- Sep 2020}
@@ -213,11 +217,11 @@
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{@es-romo/coco} $|$ \emph{C++, OpenGL, Dear ImGui, assimp, emscripten }}{Feb 2024 -- Present}
-          \resumeItemListStart
-            \resumeItem{OpenGL 3D graphics engine for gLTF and OBJ files.}
-          \resumeItemListEnd
+      % \resumeProjectHeading
+      %     {\textbf{@es-romo/coco} $|$ \emph{C++, OpenGL, Dear ImGui, assimp, emscripten }}{Feb 2024 -- Present}
+      %     \resumeItemListStart
+      %       \resumeItem{OpenGL 3D graphics engine for gLTF and OBJ files.}
+      %     \resumeItemListEnd
       \resumeProjectHeading
           {\textbf{@es-romo/relay} $|$ \emph{Typescript, Fastify, Lerna, Jest, GitHub Actions, Glitch }}{Nov 2023 -- Present}
           \resumeItemListStart
