Update languages, remove phone number, change email

--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -117,9 +117,9 @@
 \begin{center}
     \textbf{\Huge \scshape Esteban Romo} \\ \vspace{1pt}
     \href{https://github.com/es-romo}{\underline{github.com/es-romo}} $|$ 
-    \href{mailto:es-romo@proton.me}{\underline{es-romo@proton.me}} $|$ 
-    \href{https://www.linkedin.com/in/es-romo/}{\underline{linkedin.com/in/es-romo}} $|$ 
-    \small +1-437-344-0898
+    \href{mailto:esteban@romo.sh}{\underline{esteban@romo.sh}} $|$ 
+    \href{https://www.linkedin.com/in/es-romo/}{\underline{linkedin.com/in/es-romo}}
+    % \small +1-437-344-0898
 \end{center}
 
 %-----------SKILLS-----------
@@ -142,7 +142,7 @@
   \section{Languages}
   \begin{itemize}[leftmargin=0.0in, label={}]
       \small{\item{
-      \textbf{English}{: Proficient} \\
+      \textbf{English}{: Native} \\
       \textbf{Spanish}{: Native} \\
       }}
   \end{itemize}
