Comment out CETI

--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -209,9 +209,9 @@
     % \resumeSubheading
     %   {The Web Developer Bootcamp}{Jun 2019 -- Aug 2019}
     %   {Online Certificate}{udemy.com}
-    \resumeSubheading
-      {Centro de Enseñanza Técnica Industrial}{Aug 2015 -- Jun 2019}
-      {Technologist in Software Development}{Guadalajara, Mexico}
+    % \resumeSubheading
+    %   {Centro de Enseñanza Técnica Industrial}{Aug 2015 -- Jun 2019}
+    %   {Technologist in Software Development}{Guadalajara, Mexico}
   \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------
