--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -204,7 +204,7 @@
       {Sheridan College}{Sep 2019 -- Dec 2020}
       {Ontario College Diploma in Software Engineering}{Oakville, Ontario}
       \resumeItemListStart
-        \resumeItem{Cumulative GPA: 3.93/4.00; High Honours.}
+        \resumeItem{GPA: 3.93/4.00; High Honours.}
       \resumeItemListEnd
     % \resumeSubheading
     %   {The Web Developer Bootcamp}{Jun 2019 -- Aug 2019}
