Remove subproject layput

--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -138,33 +138,18 @@
       {Full Stack Software Engineer}{Apr 2021 -- Nov 2023}
       {CANImmunize}{Remote}
       \resumeItemListStart
-        \vspace{4pt}\resumeItem{Spearheaded the creation of multiple health-tech products, such as:}
-        \vspace{-4pt}\resumeItemHeading{VaxRecordNS}{Allows the residents of Nova Scotia to access their vaccination records.}
-        \resumeItemListStart
-          % \resumeItem{Collaborated closely with multiple vendors as part of a wide effort to centralize the province's health data.}
-          \resumeItem{Developed a web and mobile app using React, React Native, and Typescript that provide 1M+ people access to their vaccination records.}
-          \resumeItem{Designed scalable serverless services using Terraform, AWS, Twilio, and Redis.}
-          \resumeItem{Created service health alerts with CloudWatch; halved incidents and reached 99.98\% uptime.}
-          \resumeItem{Achieved SOC 2 compliance by integrating Snyk SAST.}
-          \resumeItem{Set up CI/CD pipelines with CircleCI and GitHub Actions; decreased the release process duration by 70\%.}
-        \resumeItemListEnd
-        \resumeItemHeading{Shield}{Helps employers collect, manage and verify proof of vaccination of their employees.}
-        \resumeItemListStart
-          \resumeItem{Built a SaaS product using Typescript, React, Node.js, AWS and PostgreSQL that reached 150K+ users.}
-          \resumeItem{Conducted technical interviews and onboarded co-op students.}
-          \resumeItem{Reviewed pull requests daily and mentored junior developers.}
-          \resumeItem{Diagnosed, mitigated and solved critical incidents as the on-call engineer.}
-        \resumeItemListEnd
-        \resumeItemHeading{ClinicFlow}{End-to-end solution that handles the COVID-19 vaccination rollouts in Yukon and Nova Scotia.}
-        \resumeItemListStart
-          \resumeItem{Developed web, Android and iOS applications with React, React Native, and PostgreSQL that handle the forecasting, booking, and proof of vaccination of 1M+ Canadians.}
-          \resumeItem{Headed bi-weekly deployments that involved major data and infrastructure migrations.}
-        \resumeItemListEnd
-        \resumeItemHeading{Canadian Vaccine Catalogue}{Comprehensive repository of vaccine products and terminology in Canada.} 
-        \resumeItemListStart 
-          \resumeItem{Maintained a public catalogue made available as an npm package, web app, and RESTful FHIR API with 100K+ records.}
-          % \resumeItem{Released new versions of the CVC with data provided by Health Canada biweekly using Jenkins.} 
-        \resumeItemListEnd 
+        \resumeItem{Developed web, Android and iOS applications with React, React Native, and PostgreSQL that power the COVID-19 vaccination campaigns in Nova Scotia and Yukon.}
+        \resumeItem{Designed scalable serverless services using Terraform, AWS, Twilio, and Redis.}
+        \resumeItem{Created service health alerts with CloudWatch; halved incidents and reached 99.98\% uptime.}
+        \resumeItem{Developed a web and mobile app using React, React Native, and Typescript that provide 1M+ people access to their vaccination records.}
+        \resumeItem{Set up CI/CD pipelines with CircleCI and GitHub Actions; decreased the release process duration by 70\%.}
+        \resumeItem{Built a SaaS product using Typescript, React, Node.js, AWS and PostgreSQL that reached 150K+ users.}
+        \resumeItem{Maintained a public catalogue vaccine products and lots made available as an npm package, web app, and RESTful FHIR API with 100K+ records.}
+        \resumeItem{Achieved SOC 2 compliance by integrating Snyk SAST.}
+        \resumeItem{Conducted technical interviews and onboarded co-op students.}
+        \resumeItem{Reviewed pull requests daily and mentored junior developers.}
+        \resumeItem{Diagnosed, mitigated and solved critical incidents as the on-call engineer.}
+        \resumeItem{Headed bi-weekly deployments that involved major data and infrastructure migrations.}
       \resumeItemListEnd
     \resumeSubheading
       {Freelance Lead Developer}{Feb 2020 -- May 2020}
@@ -192,21 +177,26 @@
     % \resumeSubheading
     %   {The Web Developer Bootcamp}{Jun 2019 -- Aug 2019}
     %   {Online Certificate}{udemy.com}
-    % \resumeSubheading
-    %   {Centro de Enseñanza Técnica Industrial}{Aug 2015 -- Jun 2019}
-    %   {Technologist in Software Development}{Guadalajara, Mexico}
+    \resumeSubheading
+      {Centro de Enseñanza Técnica Industrial}{Aug 2015 -- Jun 2019}
+      {Technologist in Software Development}{Guadalajara, Mexico}
   \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
-      % \resumeProjectHeading
-      %     {\textbf{@es-romo/coco} $|$ \emph{C++, OpenGL, Dear ImGui, assimp, emscripten }}{Feb 2024 -- Present}
-      %     \resumeItemListStart
-      %       \resumeItem{OpenGL 3D graphics engine for gLTF and OBJ files.}
-      %     \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{@es-romo/coco} $|$ \emph{Typescript, Fastify, Jest, GitHub Actions }}{Nov 2023 -- Present}
+          {\textbf{Coco} $|$ \emph{Zola, JavaScript, HTML, Sass, Tera}}{June 2024 -- Present}
+          \resumeItemListStart
+            \resumeItem{Minimal Zola theme created for my personal website.}
+          \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{Camila} $|$ \emph{C++, OpenGL, GLFW, glad, glm, assimp}}{May 2024 -- Present}
+          \resumeItemListStart
+            \resumeItem{OpenGL 3D graphics engine with PBR lighting and asset loading.}
+          \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{Kai} $|$ \emph{Typescript, Fastify, Jest, GitHub Actions }}{Nov 2023 -- Present}
           \resumeItemListStart
             \resumeItem{WebSocket relay server that bridges the communication between clients for use in listen server architectures.}
           \resumeItemListEnd
