Take out Github actions from cicd

--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -142,7 +142,7 @@
         \resumeItem{Designed scalable serverless services using Terraform, AWS, Twilio, and Redis.}
         \resumeItem{Created service health alerts with CloudWatch; halved incidents and reached 99.98\% uptime.}
         \resumeItem{Developed a web and mobile app using React, React Native, and Typescript that provide 1M+ people access to their vaccination records.}
-        \resumeItem{Set up CI/CD pipelines with CircleCI and GitHub Actions; decreased the release process duration by 70\%.}
+        \resumeItem{Set up CI/CD pipelines with CircleCI; decreased the release process duration by 70\%.}
         \resumeItem{Built a SaaS product using Typescript, React, Node.js, AWS and PostgreSQL that reached 150K+ users.}
         \resumeItem{Maintained a public catalogue vaccine products and lots made available as an npm package, web app, and RESTful FHIR API with 100K+ records.}
         \resumeItem{Achieved SOC 2 compliance by integrating Snyk SAST.}
