--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -123,6 +123,7 @@
 %----------HEADING----------
 \begin{center}
     \textbf{\Huge \scshape Esteban Romo} \\ \vspace{1pt}
+    \href{https://romo.sh}{\underline{romo.sh}} $|$ 
     \href{https://github.com/es-romo}{\underline{github.com/es-romo}} $|$ 
     \href{mailto:esteban@romo.sh}{\underline{esteban@romo.sh}} $|$ 
     \href{https://www.linkedin.com/in/es-romo/}{\underline{linkedin.com/in/es-romo}}
@@ -138,18 +139,25 @@
       {Full Stack Software Engineer}{Apr 2021 -- Nov 2023}
       {CANImmunize}{Remote}
       \resumeItemListStart
-        \resumeItem{Developed web, Android and iOS applications with React, React Native, and PostgreSQL that power the COVID-19 vaccination campaigns in Nova Scotia and Yukon.}
-        \resumeItem{Designed scalable serverless services using Terraform, AWS, Twilio, and Redis.}
-        \resumeItem{Created service health alerts with CloudWatch; halved incidents and reached 99.98\% uptime.}
-        \resumeItem{Developed a web and mobile app using React, React Native, and Typescript that provide 1M+ people access to their vaccination records.}
-        \resumeItem{Set up CI/CD pipelines with CircleCI; decreased the release process duration by 70\%.}
-        \resumeItem{Built a SaaS product using Typescript, React, Node.js, AWS and PostgreSQL that reached 150K+ users.}
-        \resumeItem{Maintained a public catalogue vaccine products and lots made available as an npm package, web app, and RESTful FHIR API with 100K+ records.}
-        \resumeItem{Achieved SOC 2 compliance by integrating Snyk SAST.}
-        \resumeItem{Conducted technical interviews and onboarded co-op students.}
-        \resumeItem{Reviewed pull requests daily and mentored junior developers.}
-        \resumeItem{Diagnosed, mitigated and solved critical incidents as the on-call engineer.}
-        \resumeItem{Headed bi-weekly deployments that involved major data and infrastructure migrations.}
+        % \resumeItem{Developed web, and mobile applications with React, React Native, and PostgreSQL that power the COVID-19 vaccination campaigns in Nova Scotia and Yukon.}
+        \resumeItem{Built web and mobile applications that power the COVID-19 vaccination campaigns in Nova Scotia and Yukon.}
+        \resumeItem{Developed user interfaces used by 1M+ people across different projects with Typescript, React, CSS, and Redux. }
+        \resumeItem{Designed serverless services that allows residents of Nova Scotia to access their vaccinaton records using Serverless, Redis and Twilio.}
+        \resumeItem{Migrated and expanded CI/CD pipelines from Jenkins to CircleCI; sharply decreased the deployment process duration by 80\%, from an average of 1 hour down to 12 minutes.}
+        \resumeItem{Ported a large legacy codebase from Node.js v9 to v18; enabled the resumption of its development.}
+        \resumeItem{Set up service health monitoring dashboards with CloudWatch and integrated them with Slack; helped halve service incidents and reach 99.98\% uptime.}
+        % \resumeItem{Developed a web and mobile app using React, React Native, and Typescript that provide 1M+ people access to their vaccination records.}
+        \resumeItem{Wrote hundreds of unit and integration tests with Jest; maintained branch coverage above 80\%.}
+        \resumeItem{Built a Sass product with 150K+ users that helps employers manage their immunization policies.}
+        % \resumeItem{Built a Sass product with 150K+ users that helps employers manage their immunization policies using React, Node.js, AWS and PostgreSQL.}
+        \resumeItem{Created Terraform templates to manage the infrastructure of many projects.}
+        \resumeItem{Maintained a public repository of vaccine products and lots made available as an npm package, web app, and REST FHIR API with 100K+ records.}
+        \resumeItem{Headed data migrations of millions of medical records with PostgreSQL and Typeorm.}
+        % \resumeItem{Achieved SOC 2 compliance by integrating Snyk SAST.}
+        \resumeItem{Participated in recruitment events, conducted technical interviews and onboarded co-op students.}
+        % \resumeItem{Reviewed pull requests daily and mentored junior developers.}
+        % \resumeItem{Diagnosed, mitigated and solved critical incidents as the on-call engineer.}
+        % \resumeItem{Headed bi-weekly deployments that involved major data and infrastructure migrations.}
       \resumeItemListEnd
     \resumeSubheading
       {Freelance Lead Developer}{Feb 2020 -- May 2020}
@@ -186,19 +194,19 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Coco} $|$ \emph{Zola, JavaScript, HTML, Sass, Tera}}{June 2024 -- Present}
+          {\textbf{Coco} $|$ \emph{JavaScript, Tera, Sass, HTML, GitHub Actions}}{June 2024 -- Present}
           \resumeItemListStart
-            \resumeItem{Minimal Zola theme created for my personal website.}
+            \resumeItem{Created a minimalistic Zola theme originally for my personal website, now freely available.}
           \resumeItemListEnd
+      % \resumeProjectHeading
+      %     {\textbf{Camila} $|$ \emph{C++, OpenGL, GLFW, glad, glm, assimp}}{May 2024 -- Present}
+      %     \resumeItemListStart
+      %       \resumeItem{OpenGL 3D graphics engine with PBR lighting and asset loading.}
+      %     \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Camila} $|$ \emph{C++, OpenGL, GLFW, glad, glm, assimp}}{May 2024 -- Present}
+          {\textbf{Kai} $|$ \emph{Typescript, Vite, Jest, Fastify }}{Nov 2023 -- Present}
           \resumeItemListStart
-            \resumeItem{OpenGL 3D graphics engine with PBR lighting and asset loading.}
-          \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{Kai} $|$ \emph{Typescript, Fastify, Jest, GitHub Actions }}{Nov 2023 -- Present}
-          \resumeItemListStart
-            \resumeItem{WebSocket relay server that bridges the communication between clients for use in listen server architectures.}
+            \resumeItem{Built a WebSocket relay server that bridges the communication between clients for use in listen-server architectures.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
@@ -212,7 +220,7 @@
       \textbf{Frameworks}{: React, React Native, ExpressJS, Jest, Fastify.} \\
       \textbf{Tools}{: CircleCI, GitHub Actions, Git.} \\
       \textbf{Infrastructure}{: AWS, Terraform, Firebase.} \\
-      \textbf{Libraries \& Others}{: Node.js, Redis, Docker, Typeorm, Ant Design, Tailwind.} \\
+      \textbf{Others}{: Node.js, Redis, Docker, Typeorm, Tailwind.} \\
       % \textbf{Libraries \& Others}{: Node.js, OpenGL, Dear ImGui, Ant Design, Tailwind, Redis, Docker.} \\
       }}
   \end{itemize}
