--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -148,7 +148,7 @@
         \resumeItem{Set up service health monitoring dashboards with CloudWatch and integrated them with Slack; helped halve service incidents and reach 99.98\% uptime.}
         % \resumeItem{Developed a web and mobile app using React, React Native, and Typescript that provide 1M+ people access to their vaccination records.}
         \resumeItem{Wrote hundreds of unit and integration tests with Jest; maintained branch coverage above 80\%.}
-        \resumeItem{Built a Sass product with 150K+ users that helps employers manage their immunization policies.}
+        \resumeItem{Built a SasS product with 150K+ users that helps employers manage their immunization policies.}
         % \resumeItem{Built a Sass product with 150K+ users that helps employers manage their immunization policies using React, Node.js, AWS and PostgreSQL.}
         \resumeItem{Created Terraform templates to manage the infrastructure of many projects.}
         \resumeItem{Maintained a public repository of vaccine products and lots made available as an npm package, web app, and REST FHIR API with 100K+ records.}
